syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User{
    rpc CreateUser(CreateUserInfo) returns (UserInfoResponse); // 添加用户
    rpc GetUserByMobile(MobileRequest) returns (UserInfoResponse); // 根据手机号获取用户信息
    rpc GetUserById(IdRequest) returns (UserInfoResponse); // 根据用户名获取用户信息
    rpc UpdateUser(UpdateUserInfo) returns (google.protobuf.Empty); // 更新用户信息
    rpc CreateUserAddress(CreateUserAddressInfo) returns (UserAddressResponse); // 添加用户地址
}

message CreateUserInfo{
    string username = 1;
    string password = 2;
    string mobile = 3;
}

message ExtraInfo {
    // Add specific fields here based on what extra information you plan to store.
    // e.g., address, preferences, etc.
}

message UserInfoResponse{
    int32 id = 1;
    string username = 2;
    string password = 3;
    string email = 4;
    string mobile = 5;
    string gender = 6;
    int32 role =7;
    ExtraInfo extra_info = 8;  
}


message CreateUserAddressInfo{
    int32 user_id = 1;
    string address = 2;
    bool is_default = 3;
}

message UserAddressResponse{
    int32 id = 1;
    int32 user_id = 2;
    string address = 3;
    bool is_default = 4;
}

message MobileRequest{
    string mobile = 1;
}

message IdRequest{
    int32 id = 1;
}

message UpdateUserInfo{
    int32 id = 1;
    string username = 2;
    string email = 3;
    ExtraInfo extra_info = 4;  
}